--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="my-bg-photo bg-secondary text-white py-5 text-center shadow">
-      <h1 class="display-4">My Cool Website</h1>
+      <h1 class="display-4">Kens Home Page</h1>
       <p class="lead mb-0">A super interesting place on the web.</p>
     </div>
 
@@ -30,8 +30,8 @@
       <div class="row">
         <div class="col-md-7">
           <h1>Hey, welcome!</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ratione inventore, quae modi voluptatem odit labore molestias cupiditate voluptas velit recusandae nisi neque, odio ullam ea libero quo sed praesentium.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid dolorum autem fuga temporibus architecto, numquam repellendus commodi minus excepturi. Voluptatum minima impedit inventore. Ipsum, voluptatem veritatis! Odio quod quaerat atque.</p>
+          <p class="lead">first.</p>
+          <p>second.</p>
           <a href="about.html" class="btn btn-primary btn-lg">Read Our Story</a>
         </div>
         <div class="col-md-5 text-center pt-5">
